--- a/styles/style.css
+++ b/styles/style.css
@@ -1,91 +1,176 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
 
 .header,
 .footer,
-.hero{
-background-color: #1f2937;
-color: #f9faf8;
-font-size: 18px;
-padding: 0 60px;
+.hero {
+  background-color: #1f2937;
+  color: #f9faf8;
+  font-size: 18px;
+  padding: 0 130px;
 }
 
-.hero{
-    height: 100vh;
+.hero {
+  height: 100vh;
 }
 
-.header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 130px;
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.logo{
-    font-size: 24px;
-    font-weight: 900;
+.logo {
+  font-size: 24px;
+  font-weight: 900;
 }
 
-ul{
-    display: flex;
-    gap: 30px;
+ul {
+  display: flex;
+  gap: 30px;
 }
 
-a{
-    text-decoration: none;
-    color: inherit
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
 
-.hero{
-    display: flex;
-    align-items: center;
-    color: #e5e7eb;
-    justify-content: space-around;
-}
-.hero-content{
-    width: 50%;
-}
-.hero-header{
-    font-size: 48px;
-    font-weight: 900;
-    margin: 0;
-    color: #f9faf8;
+.hero {
+  display: flex;
+  align-items: center;
+  color: #e5e7eb;
+  justify-content: space-between;
 }
 
+.hero-content {
+  width: 50%;
+}
+
+.hero-header {
+  font-size: 48px;
+  font-weight: 900;
+  margin: 0;
+  color: #f9faf8;
+}
 
 /* INFORMATION SECTION */
 
-.information{
-    color: #1f2937;
+.information {
+  color: #1f2937;
+  text-align: center;
+  padding: 30px;
+  margin-bottom: 60px;
+}
+
+.information-header {
+  font-size: 38px;
+  margin: 0 0 30px 0;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.card {
+  width: 250px;
+  padding: 10px;
+  border: 3px solid #3882f6;
+  border-radius: 10px;
+}
+
+.card-img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+/* TESTIMONIALS SECTION */
+
+.testimonials {
+  background-color: #e5e7eb;
+  color: #1f2937;
+  padding: 130px;
+  margin-bottom: 60px;
+  font-size: 36px;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.quote {
+  margin: 0;
+}
+
+.author {
+  display: block;
+  text-align: right;
+}
+
+/* CALL TO ACTION */
+
+.call-to-action {
+  padding: 30px 130px;
+  margin-bottom: 60px;
+  font-size: 18px;
+}
+
+.call-to-action-wrapper {
+  display: flex;
+  background-color: #3882f6;
+  color: #f9faf8;
+  padding: 30px 60px;
+  border-radius: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.call-to-action-content {
+  flex: 0 1 70%;
+}
+
+.call-to-action-header {
+  margin: 0;
+  font-weight: 900;
+}
+
+.call-to-action-text {
+  margin: 0;
+}
+
+/* BUTTONS */
+
+.button {
+  background-color: #3882f6;
+  color: #f9faf8;
+  padding: 10px 30px;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.call-to-action-button {
+  flex-grow: 0 0 auto;
+  height: max-content;
+  border: 2px solid #f9faf8;
+}
+
+/* FOOTER */
+
+.footer{
+    font-size: 16px;
+    padding: 30px 160px;
     text-align: center;
 }
 
-.information-header{
-    font-size: 38px;
-}
-
-.card-wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-}
-
-.card{
-    width: 250px;
-    padding: 10px;
-    border: 3px solid #3882f6;
-    border-radius: 10px;
-}
-
-.card-img{
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
+.footer a{
+    color: #3882f6;
 }
