fix minor details

--- a/styles/style.css
+++ b/styles/style.css
@@ -151,6 +151,7 @@ li {
   background-color: #3882f6;
   color: #f9faf8;
   padding: 10px 30px;
+  border: none;
   border-radius: 10px;
   font-size: 18px;
   font-weight: 600;
